Fix mouse cursor on textarea scrollbars (#10630)

--- a/css/80_app.css
+++ b/css/80_app.css
@@ -5788,6 +5788,7 @@ li.hide + li.version .badge .tooltip .popover-arrow {
     border: solid transparent;
     border-width: 3px 3px 3px 4px;
     border-radius: 6px;
+    cursor: auto;
 }
 ::-webkit-scrollbar-track:active {
     background-color: rgba(0,0,0,.05);
